# databricks-adbc

./: .gitignore  .gitmodules  .rat-apache  .rat-excludes  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature-request.yml  03-question.yml  config.yml
.github/workflows/: README.md  benchmarks.yml  csharp.yml  e2e-tests.yml  pre-commit.yml  trigger-integration-tests.yml
ci/scripts/: csharp_benchmark.sh  csharp_test_databricks_e2e.sh
csharp/: Directory.Build.props  Directory.Packages.props
csharp/Benchmarks/: CloudFetchBenchmarkRunner.cs  CloudFetchRealE2EBenchmark.cs  README.md  benchmark-queries.json  benchmark-queries.md
csharp/doc/: statement-execution-api-design.md  telemetry-sprint-plan.md
csharp/src/: AdbcDrivers.Databricks.csproj  AssemblyInfo.cs  DatabricksConfiguration.cs  DatabricksConnection.cs  DatabricksDatabase.cs  DatabricksDriver.cs  DatabricksException.cs  DatabricksParameters.cs  DatabricksSchemaParser.cs  DatabricksStatement.cs  FeatureVersionNegotiator.cs  Lz4Utilities.cs  RetryHttpHandler.cs  ThriftErrorMessageHandler.cs  TracingDelegatingHandler.cs  readme.md
csharp/test/: AdbcDrivers.Databricks.Tests.csproj  (+1 more)
go/: connection.go  database.go  driver_test.go  ipc_reader_adapter.go
rust/: CLAUDE.md  Cargo.toml  Makefile  README.md
rust/src/: connection.rs  database.rs  driver.rs  error.rs  lib.rs  statement.rs
rust/src/auth/: mod.rs  oauth.rs  pat.rs
rust/src/client/: http.rs  mod.rs
rust/src/reader/: cloudfetch.rs  mod.rs
rust/src/result/: mod.rs
rust/src/telemetry/: mod.rs
rust/tests/: integration.rs
(+89 files in other folders)
