# Copyright (c) 2025 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "databricks-adbc"
version = "0.1.0"
edition = "2021"
authors = ["Databricks"]
license = "Apache-2.0"
description = "Databricks ADBC Driver for Rust"
repository = "https://github.com/adbc-drivers/databricks"
keywords = ["databricks", "adbc", "arrow", "database", "sql"]
categories = ["database"]

[dependencies]
adbc_core = "0.22"
driverbase = { git = "https://github.com/adbc-drivers/driverbase-rs.git", rev = "a824debf9cbc2236bc12a09c178576b8254c04c4" }
tracing = "0.1"

# Use arrow versions that match driverbase (which uses v57)
# The adbc_core crate accepts >=53.1.0, <58
arrow-array = "57"
arrow-schema = "57"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lib]
name = "databricks_adbc"
path = "src/lib.rs"
